--- a/public/themes/default/public/footer/footer.html
+++ b/public/themes/default/public/footer/footer.html
@@ -8,7 +8,6 @@
           </div>
           <div class="footer_box_top_left_slogan">
             <div>{$widget.vars.slogan}</div>
-            <div class="footer_box_top_left_slogan_bottom">Celticint is a subsidiary of EKO Group</div>
           </div>
         </widget>
         <div class="footer_box_top_left_icon">
@@ -19,79 +18,24 @@
       <!-- 链接 -->
       <div class="footer_box_top_link">
         <div class="footer_box_top_link_item">
-          <a href="{:url('/portal/index')}">
-            <div class="footer_box_top_link_item_title">Home</div>
-          </a>
-          <a href="{:url('/portal/index')}#indexModel1">
-            <div class="footer_box_top_link_item_subitem">Platform Features</div>
-          </a>
-          <a href="{:url('/portal/index')}#indexModel2">
-            <div class="footer_box_top_link_item_subitem">Our Service</div>
-          </a>
+          <div class="footer_box_top_link_item_title">Hainan</div>
+          <div class="footer_box_top_link_item_subitem">Area A, Oasis Industrial Park, Meilan, Haikou, China</div>
         </div>
         <div class="footer_box_top_link_item">
-          <a href="{:url('/portal/carbontrace')}">
-            <div class="footer_box_top_link_item_title">Carbon Trace</div>
-          </a>
-          <a href="{:url('/portal/carbontrace')}#carbontraceModel1">
-            <div class="footer_box_top_link_item_subitem">Product Life Cycle Tracing</div>
-          </a>
-          <a href="{:url('/portal/carbontrace')}#carbontraceModel2">
-            <div class="footer_box_top_link_item_subitem">Interpretation</div>
-          </a>
-          <a href="{:url('/portal/carbontrace')}#carbontraceModel3">
-            <div class="footer_box_top_link_item_subitem">Carbon tracking database</div>
-          </a>
+          <div class="footer_box_top_link_item_title">Beijing</div>
+          <div class="footer_box_top_link_item_subitem">Room 1710, Building A, Wanda Plaza, Chaoyang, Beijing, China</div>
         </div>
         <div class="footer_box_top_link_item">
-          <a href="{:url('/portal/products')}">
-            <div class="footer_box_top_link_item_title">Products</div>
-          </a>
-          <a href="{:url('/portal/products')}#productsModel1">
-            <div class="footer_box_top_link_item_subitem">Case Study</div>
-          </a>
+          <div class="footer_box_top_link_item_title">Dublin</div>
+          <div class="footer_box_top_link_item_subitem">16 Herbert Pl, Dublin 2, Ireland</div>
         </div>
         <div class="footer_box_top_link_item">
-          <a href="{:url('/portal/supplychain')}">
-            <div class="footer_box_top_link_item_title">Supply Chain</div>
-          </a>
-          <a href="{:url('/portal/supplychain')}#supplychainModel1">
-            <div class="footer_box_top_link_item_subitem">Supplier Management</div>
-          </a>
-          <a href="{:url('/portal/supplychain')}#supplychainModel2">
-            <div class="footer_box_top_link_item_subitem">Purchasing management</div>
-          </a>
-          <a href="{:url('/portal/supplychain')}#supplychainModel3">
-            <div class="footer_box_top_link_item_subitem">Carbon footprint monitoring</div>
-          </a>
-          <a href="{:url('/portal/supplychain')}#supplychainModel4">
-            <div class="footer_box_top_link_item_subitem">Enter the platform</div>
-          </a>
+          <div class="footer_box_top_link_item_title">Ennis</div>
+          <div class="footer_box_top_link_item_subitem">Suite 3, Áras Smith O’Brien Bank Place, Ennis, Co.Clare, Ireland</div>
         </div>
         <div class="footer_box_top_link_item">
-          <a href="{:url('/portal/warehouse')}">
-            <div class="footer_box_top_link_item_title">Warehouse</div>
-          </a>
-          <a href="{:url('/portal/warehouse')}#warehouseModel1">
-            <div class="footer_box_top_link_item_subitem">Warehousing services</div>
-          </a>
-          <a href="{:url('/portal/warehouse')}#warehouseModel2">
-            <div class="footer_box_top_link_item_subitem">logistics</div>
-          </a>
-        </div>
-        <div class="footer_box_top_link_item">
-          <a href="{:url('/portal/about')}">
-            <div class="footer_box_top_link_item_title">About</div>
-          </a>
-          <a href="{:url('/portal/about')}#aboutModel1">
-            <div class="footer_box_top_link_item_subitem">About</div>
-          </a>
-          <a href="{:url('/portal/about')}#aboutModel2">
-            <div class="footer_box_top_link_item_subitem">FAQ</div>
-          </a>
-          <a href="{:url('/portal/about')}#aboutModel3">
-            <div class="footer_box_top_link_item_subitem">Contact Us</div>
-          </a>
+          <div class="footer_box_top_link_item_title">Abu Dhabi</div>
+          <div class="footer_box_top_link_item_subitem">14th Floor, Al Khatem Tower, Al Maryah Island, Abu Dhabi, UAE</div>
         </div>
       </div>
     </div>
