--- a/public/themes/default/portal/supplychain.html
+++ b/public/themes/default/portal/supplychain.html
@@ -25,81 +25,21 @@
     </widget>
   </div>
 
-  <!-- 供应商管理 -->
-  <div class="grey" id="supplychainModel1">
-    <widget name="SupplierManagement">
-      <div class="main-center main-title">
-        <div class="big-title">{$widget.vars.title}</div>
-        <div class="small-title">{$widget.vars.title2}</div>
-      </div>
-
-      <div class="main-center supplierManagement">
-        <div class="supplierManagement_left">
-          <img src="__ROOT__/upload/{$widget.vars.varName1}" alt="">
-        </div>
-        <div class="supplierManagement_right">
-          <volist name="$widget.vars.varName2" id="vo">
-            <div class="supplierManagement_right_item">
-              <div class="supplierManagement_right_item_title">{$vo.title}</div>
-              <div class="supplierManagement_right_item_desc">{$vo.content}</div>
-            </div>
-          </volist>
+  <widget name="supplychainItem">
+    <volist name="$widget.vars.varName1" id="vo">
+      <div class="white">
+        <div class="supplychainItem main-center">
+          <div class="supplychainItem_img">
+            <img src="__ROOT__/upload/{$vo.icon}" alt="">
+          </div>
+          <div class="supplychainItem_content">
+            <div class="supplychainItem_content_title">{$vo.title}</div>
+            <div class="supplychainItem_content_desc">{$vo.content}</div>
+          </div>
         </div>
       </div>
-    </widget>
-  </div>
-
-  <!-- 采购管理 -->
-  <div class="white" id="supplychainModel2">
-    <widget name="Purchasingmanagement">
-      <div class="main-center main-title">
-        <div class="big-title">{$widget.vars.title}</div>
-        <div class="small-title">{$widget.vars.title2}</div>
-      </div>
-
-      <div class="main-center purchaseManagement">
-        <div class="purchaseManagement_box">
-          <volist name="$widget.vars.varName1" id="vo">
-            <div class="purchaseManagement_box_item">
-              <div class="purchaseManagement_box_item_title">{$vo.title}</div>
-              <div class="purchaseManagement_box_item_desc">{$vo.content}</div>
-            </div>
-          </volist>
-        </div>
-      </div>
-    </widget>
-  </div>
-
-  <!-- 碳足迹监测 -->
-  <div class="grey" id="supplychainModel3">
-    <widget name="CarbonFootprintMonitoring">
-
-      <div class="main-center carbonFootprint">
-        <div class="carbonFootprint_left">
-          <div class="big-title">{$widget.vars.title}</div>
-          <div class="small-title">{$widget.vars.title2}</div>
-        </div>
-
-        <div class="carbonFootprint_right">
-          <volist name="$widget.vars.varName1" id="vo">
-            <div class="carbonFootprint_right_item">
-              <div class="carbonFootprint_right_item_icon">
-                <img src="__ROOT__/upload/{$vo.icon}" alt="">
-              </div>
-              <div class="carbonFootprint_right_item_title">{$vo.title}</div>
-            </div>
-          </volist>
-        </div>
-      </div>
-    </widget>
-  </div>
-
-  <!-- 入驻流程 -->
-
-  <div id="supplychainModel4">
-    <include file="public@entertheplatform1/entertheplatform1" />
-  </div>
-
+    </volist>
+  </widget>
 
   <!-- footer -->
   <include file="public@footer/footer" />
