--- a/public/themes/default_en-us/portal/about.html
+++ b/public/themes/default_en-us/portal/about.html
@@ -106,48 +106,63 @@
   <!-- footer -->
   <include file="public@footer/footer" />
 </body>
-<script type="text/javascript" src="__TMPL__/static/js/common.js"></script>
 <script type="text/javascript">
-  $(function () {
-    //初始化发表评论表单
-    AjaxInitForm('#feedback_form', '#btnSubmit', 1);
-  });
+  function AjaxInitForm(formObj, btnObj) {
+    $(formObj).Validform({
+      callback: function (form) {
+        //AJAX提交表单
+        $(form).ajaxSubmit({
+          beforeSubmit: formRequest,
+          success: formResponse,
+          url: $(formObj).attr("url"),
+          type: "post",
+          dataType: "json",
+          timeout: 60000
+        })
+        return false
+      }
+    })
+
+    //表单提交前
+    function formRequest(formData, jqForm, options) {
+      $(btnObj).prop("disabled", true)
+    }
+
+    //表单提交后
+    function formResponse(data, textStatus) {
+      if (data.msg == "添加成功!") {
+        $("#popupSuccess").css("display", "block")
+        $('#sendBtn').hide()
+        $(formObj).resetForm()
+      }
+    }
+  }
+
+  document.querySelector('.contact_box_right_box').addEventListener('submit', function (event) {
+    event.preventDefault()
+
+    // 先验证表单数据是否填写完整
+    if (!event.target.name.value || !event.target.phone.value || !event.target.email.value || !event.target.buisiness.value) {
+      alert('Please fill in the complete information')
+      return
+    }
+
+    // 验证邮箱格式是否正确
+    if (!/^[\w-]+(\.[\w-]+)*@[\w-]+(\.[\w-]+)+$/.test(event.target.email.value)) {
+      alert('Please enter the correct email format')
+      return
+    }
+    AjaxInitForm('#feedback_form', '#sendBtn')
+
+  })
+
+
+
+
+  // $(function () {
+  //   //初始化发表评论表单
+  //   AjaxInitForm('#feedback_form', '#btnSubmit', 1);
+  // });
 </script>
 
 </html>
-
-<script>
-  // 监听表单提交事件
-  // document.querySelector('.contact_box_right_box').addEventListener('submit', function (event) {
-  //   event.preventDefault()
-  //
-  //   // 先验证表单数据是否填写完整
-  //   if (!event.target.name.value || !event.target.phone.value || !event.target.email.value || !event.target.content.value) {
-  //     alert('Please fill in the complete information')
-  //     return
-  //   }
-  //
-  //   // 验证邮箱格式是否正确
-  //   if (!/^[\w-]+(\.[\w-]+)*@[\w-]+(\.[\w-]+)+$/.test(event.target.email.value)) {
-  //     alert('Please enter the correct email format')
-  //     return
-  //   }
-  //
-  //   return
-  //   // 使用Fetch API或其他方式提交表单数据
-  //   fetch('about/submitForm', {
-  //     method: 'POST',
-  //     body: new FormData(event.target),
-  //   })
-  //     .then(response => response.json())
-  //     .then(data => {
-  //       if (data.status === 'success') {
-  //         document.getElementById('popupSuccess').style.display = 'block';
-  //         document.getElementById('sendBtn').style.display = 'none';
-  //         // 清空表单数据
-  //         event.target.reset();
-  //
-  //       }
-  //     })
-  // })
-</script>
