--- a/public/themes/default/public/header/header.html
+++ b/public/themes/default/public/header/header.html
@@ -22,6 +22,9 @@
         <a href="{:cmf_url('portal/Warehouse/index')}">仓储</a>
       </div>
       <div class="header_box_nav_item">
+        <a href="{:cmf_url('portal/Building/index')}">建筑设计建造</a>
+      </div>
+      <div class="header_box_nav_item">
         <a href="{:cmf_url('portal/About/index')}">关于我们</a>
       </div>
     </div>
@@ -55,6 +58,9 @@
     </div>
     <div class="header_box_phone_navBox_item">
       <a href="{:cmf_url('portal/Warehouse/index')}">仓储</a>
+    </div>
+    <div class="header_box_phone_navBox_item">
+      <a href="{:cmf_url('portal/Building/index')}">建筑设计建造</a>
     </div>
     <div class="header_box_phone_navBox_item">
       <a href="{:cmf_url('portal/About/index')}">关于我们</a>
