--- a/public/themes/default_en-us/public/header/header.html
+++ b/public/themes/default_en-us/public/header/header.html
@@ -22,6 +22,9 @@
         <a href="{:cmf_url('portal/Warehouse/index?_design_theme=default_en-us')}">Warehouse</a>
       </div>
       <div class="header_box_nav_item">
+        <a href="{:cmf_url('portal/Building/index?_design_theme=default_en-us')}">Building Design</a>
+      </div>
+      <div class="header_box_nav_item">
         <a href="{:cmf_url('portal/About/index?_design_theme=default_en-us')}">About</a>
       </div>
     </div>
@@ -56,6 +59,9 @@
     </div>
     <div class="header_box_phone_navBox_item">
       <a href="{:cmf_url('portal/Warehouse/index?_design_theme=default_en-us')}">Warehouse</a>
+    </div>
+    <div class="header_box_phone_navBox_item">
+      <a href="{:cmf_url('portal/Building/index?_design_theme=default_en-us')}">Building Design</a>
     </div>
     <div class="header_box_phone_navBox_item">
       <a href="{:cmf_url('portal/About/index?_design_theme=default_en-us')}">About</a>
