--- a/public/themes/default/portal/building.html
+++ b/public/themes/default/portal/building.html
@@ -16,76 +16,39 @@
 
   <!-- banner -->
   <div class="banner banner_box540">
-    <widget name="banner">
-      <div id="sliderBox" class="banner_box banner_box540">
 
+    <div id="sliderBox" class="banner_box banner_box540">
+
+      <portal:articles item="vo" limit="3" order="post.published_time DESC" categoryIds="67">
         <div id="sliderBoxItem" class="banner_box_img sliderBoxItem">
-          <img src="__STATIC__/images/baa.png" alt="">
+          <img src="{:cmf_get_image_url($vo.thumbnail)}" alt="">
           <div class="banner_box_img_title bannerTitleCenter">
-            <div class="banner_box_img_title_big">建筑设计建造</div>
-            <div class="banner_box_img_title_small">Elye distribution specialises in long temm pallet storage, working
-              out of a 25,000m2
-
-              standalonefacility in scariff, co. clare.We store products for companies and government bodies
-
-              in ireland and we source, import andstore products from around the world.</div>
+            <div class="banner_box_img_title_big">{$vo.post_title}</div>
+            <div class="banner_box_img_title_small">{$vo.post_excerpt}</div>
           </div>
         </div>
+      </portal:articles>
 
-      </div>
-    </widget>
+    </div>
+
   </div>
 
 
-
-  <div class="white">
-    <div class="supplychainItem main-center">
-      <div class="supplychainItem_img">
-        <img src="__STATIC__/images/a1.png" alt="">
-      </div>
-      <div class="supplychainItem_content">
-        <div class="supplychainItem_content_title">Strategic Partnerships</div>
-        <div class="supplychainItem_content_desc">We collaborate with trusted suppliers who share our commitment to
-          excellence and ethics.</div>
+  <portal:articles item="vo" limit="4" order="post.published_time DESC" categoryIds="68">
+    <div class="white">
+      <div class="supplychainItem main-center">
+        <div class="supplychainItem_img">
+          <img src="{:cmf_get_image_url($vo.thumbnail)}" alt="">
+        </div>
+        <div class="supplychainItem_content">
+          <div class="supplychainItem_content_title">{$vo.post_title}</div>
+          <div class="supplychainItem_content_desc">{$vo.post_excerpt}</div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="white">
-    <div class="supplychainItem main-center">
-      <div class="supplychainItem_img">
-        <img src="__STATIC__/images/a1.png" alt="">
-      </div>
-      <div class="supplychainItem_content">
-        <div class="supplychainItem_content_title">Strategic Partnerships</div>
-        <div class="supplychainItem_content_desc">We collaborate with trusted suppliers who share our commitment to
-          excellence and ethics.</div>
-      </div>
-    </div>
-  </div>
-  <div class="white">
-    <div class="supplychainItem main-center">
-      <div class="supplychainItem_img">
-        <img src="__STATIC__/images/a1.png" alt="">
-      </div>
-      <div class="supplychainItem_content">
-        <div class="supplychainItem_content_title">Strategic Partnerships</div>
-        <div class="supplychainItem_content_desc">We collaborate with trusted suppliers who share our commitment to
-          excellence and ethics.</div>
-      </div>
-    </div>
-  </div>
-  <div class="white">
-    <div class="supplychainItem main-center">
-      <div class="supplychainItem_img">
-        <img src="__STATIC__/images/a1.png" alt="">
-      </div>
-      <div class="supplychainItem_content">
-        <div class="supplychainItem_content_title">Strategic Partnerships</div>
-        <div class="supplychainItem_content_desc">We collaborate with trusted suppliers who share our commitment to
-          excellence and ethics.</div>
-      </div>
-    </div>
-  </div>
+  </portal:articles>
+
+
   <!-- 联系我们 -->
   <div class="white">
     <div class="main-center contact">
@@ -93,28 +56,19 @@
       <div class="contact_box">
         <div class="contact_box_left">
           <div class="contact_box_left_top">
+            <portal:articles item="vo" limit="4" order="post.published_time ASC" categoryIds="69">
+              <div class="contact_box_left_top_item">
+                <div class="contact_box_left_top_item_icon">
+                  <img src="{:cmf_get_image_url($vo.thumbnail)}" alt="">
+                </div>
+                <div class="contact_box_left_top_item_right">
+                  <div class="contact_box_left_top_item_right_title">{$vo.post_title}</div>
+                  <div class="contact_box_left_top_item_right_desc">{$vo.post_source}</div>
+                  <div class="contact_box_left_top_item_right_content">{$vo.post_excerpt}</div>
+                </div>
+              </div>
+            </portal:articles>
 
-            <div class="contact_box_left_top_item">
-              <div class="contact_box_left_top_item_icon">
-                <img src="__STATIC__/images/12.png" alt="">
-              </div>
-              <div class="contact_box_left_top_item_right">
-                <div class="contact_box_left_top_item_right_title">Call us on</div>
-                <div class="contact_box_left_top_item_right_desc">Mon -Fri from 8am to 5pm.</div>
-                <div class="contact_box_left_top_item_right_content">+353 1 535 7666</div>
-              </div>
-            </div>
-
-            <div class="contact_box_left_top_item">
-              <div class="contact_box_left_top_item_icon">
-                <img src="__STATIC__/images/13.png" alt="">
-              </div>
-              <div class="contact_box_left_top_item_right">
-                <div class="contact_box_left_top_item_right_title">Or email us on</div>
-                <div class="contact_box_left_top_item_right_desc">Our friendly team is hero to help</div>
-                <div class="contact_box_left_top_item_right_content">info@celtic.com</div>
-              </div>
-            </div>
 
           </div>
           <div class="contact_box_left_bottom">
